[project]
name = "fadpb-gsm8k-experiment"
version = "1.2.0"
requires-python = ">=3.10"

[project.dependencies]
torch = ">=2.1.0"
transformers = ">=4.36.2"
datasets = ">=2.14.6"
peft = ">=0.7.2"
hydra-core = ">=1.3.2"
wandb = ">=0.16.3"
optuna = ">=3.5.0"
pandas = ">=2.1.4"
matplotlib = ">=3.8.2"
seaborn = ">=0.13.1"
scikit-learn = ">=1.3.2"
scipy = ">=1.11.4"
tqdm = ">=4.66.1"